--- a/index.html
+++ b/index.html
@@ -1,11 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400;1,700&family=Sen&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>DuAn4</title>
   </head>
   <body>
-    ThangYeuGiang
+    <!-- Head  -->
+    <div class="header">
+      <div class="main-content">
+        <div class="headbody">
+          <div class="head1">
+            <img src="./assets/img/icon/icon1.svg" alt="" class="logo" />
+            <div class="logo1">
+              <img src="./assets/img/icon/icon2.svg" alt="" />
+              <img src="./assets/img/icon/icon3.svg" alt="" />
+            </div>
+          </div>
+          <nav class="head2">
+            <ul class="active">
+              <li>
+                <a href="#">Home</a>
+              </li>
+              <li>
+                <a href="#">Features</a>
+              </li>
+              <li>
+                <a href="#">Pricing</a>
+              </li>
+              <li>
+                <a href="#">About</a>
+              </li>
+              <li>
+                <a href="#">Contact</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="head3">
+            <a href="#" class="sin btn">Sign in</a>
+            <a href="#" class="btn sup">Sign up</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--Tab 1  -->
+    <div class="body">
+      <div class="main-content">
+        <div class="bodydad">
+          <div class="body1">
+            <p class="note">😎 EASY LEAENING PLATFORM</p>
+            <h1 class="title">Words learner come here.</h1>
+            <p>
+              Build skills with courses, certificates, and get online knowledge
+              from our world-class platform.
+            </p>
+            <div class="button">
+              <div class="btn gst">Get Started</div>
+              <a href="#" class="icon"
+                ><img src="./assets/img/icon/iconbutton.svg" alt="button"
+              /></a>
+            </div>
+          </div>
+        </div>
+        <div class="body2"></div>
+      </div>
+    </div>
   </body>
 </html>
